# lodestone_news

./: .gitlab-ci.yml  Cargo.toml  README.md  convert.py
migrations/20171008220637_create_news_items/: down.sql  up.sql
migrations/20171008220936_create_servers/: down.sql  up.sql
migrations/20171008221025_create_send_records/: down.sql  up.sql
migrations/2018-02-04-180147_add_image/: down.sql  up.sql
migrations/2018-02-04-184811_add_description/: down.sql  up.sql
migrations/2018-02-07-051337_add_fields_column/: down.sql  up.sql
src/: discord.rs  iter.rs  lodestone.rs  logging.rs  main.rs
src/database/: schema.rs
src/database/models/: mod.rs  news_item.rs  send_record.rs  server.rs
