[package]
name = "lodestone_news"
version = "0.1.0"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]

[dependencies]
ansi_term = "0.12"
# crossbeam?
bus = "2"
chan = "0.1"
# chan-signal is deprecated
chan-signal = "0.3"
chrono = "0.4"
ctrlc = "3.0"
diesel = { version = "1.0", features = ["sqlite", "chrono"] }
dotenv = "0.14"
ego-tree = "0.6"
error-chain = "0.12"
fern = "0.5"
log = "0.4"
reqwest = "0.9"
scraper = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
