[package]
name = "lodestone_news"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
crossbeam-channel = "0.3"
ctrlc = "3"
diesel = { version = "1", features = ["sqlite", "chrono"] }
dotenv = "0.14"
ego-tree = "0.6"
error-chain = "0.12"
fern = "0.5"
log = "0.4"
reqwest = "0.9"
scraper = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
signal-hook = "0.1"
